[tool.poetry]
name = "python-portfolio"
version = "0.0.1"
description = ""
authors = ["TheDerpyKrafter <github.com/thederpykrafter>"]

[tool.poetry.dependencies]
python = ">=3.10.0,<4"
pygame = "^2.1.2"
pygame-menu = "4.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"